--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -147,7 +147,7 @@
 <!-- ------------------------------------------------------------------ -->
 <!-- ------------------------------------------------------------------ -->
 
-{% include './certificates.html' %}
+{% include 'home/certificates.html' %}
 
 
 
