--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -65,6 +65,13 @@
               </div>
               <hr class="hr " />
 
+              <!-- C# SKILL -->
+              <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25"
+                aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar rounded-pill bg-gradient-coding" style="width: 60%">C# 60%</div>
+              </div>
+              <hr class="hr " />
+
               <!-- LANGUAGE SKILLS -->
 
 
@@ -77,7 +84,7 @@
           <!--  -->
           <!--  -->
           <!-- LANGUAGE SKILLS -->
-          <div class="col">
+          <div style="margin: 0px; padding: 0px;" class="col">
 
             <h2 style="text-align: center;">LANGUAGES</h2>
             <hr>
