--- a/home/templates/home/footer.html
+++ b/home/templates/home/footer.html
@@ -31,6 +31,5 @@
         </div>
     </div>
 </footer>
-<!-- ================================
-      End Footer
-      ================================= -->
+
+<!-- end of footer -->
