--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-8 cool-shadow">
-        <img src="{{ project.image.url }}" alt="project.title" width="100%">
+        <img src="{{ project.image.url }}" alt="{{ project.title }}" width="100%">
     </div>
     <div class="col-md-4">
         <h5>About the project:</h5>
