--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -29,7 +29,7 @@
             <div style="max-width: 300px;" class="skills center card cool-shadow border-0 col">
               <hr class="hr" />
 
-              <!-- ******************* -->
+
               <!-- PYTHON SKILL -->
               <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25"
                 aria-valuemin="0" aria-valuemax="100">
@@ -75,7 +75,7 @@
               <!-- LANGUAGE SKILLS -->
 
 
-              <!-- ******************* -->
+
 
             </div>
           </div>
@@ -93,7 +93,7 @@
 
               <hr class="hr" />
 
-              <!-- ******************* -->
+
               <!-- Spanish-->
               <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25"
                 aria-valuemin="0" aria-valuemax="100">
@@ -154,7 +154,7 @@
 <!-- ------------------------------------------------------------------ -->
 <!-- ------------------------------------------------------------------ -->
 
-<!-- {% include 'home/certificates.html' %} -->
+{% include 'home/certificates.html' %}
 
 
 
