Update look of home page

--- a/home/templates/home/header.html
+++ b/home/templates/home/header.html
@@ -1,9 +1,9 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm p-3 mb-5 bg-body-tertiary rounded sticky-top"
-  id="header-navbar">
+  id="header-navbar" style="margin: 0px; padding: 0%;">
   <a href="{% url 'home.home' %}"><img id="profile-picture" src="{% static 'images/profile-pic.png' %}" height="50"
-      width="50" alt="profile picture gero zayas" style="margin: 20px;" /></a>
+      width="50" alt="profile picture gero zayas" style="margin: 8px;" /></a>
   <a class="navbar-brand" href="{% url 'home.home' %}" style="font-size: 1.5em;"></a>
 
   <!--  -->
