--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -9,15 +9,24 @@
     <link rel="shorcut icon" href="/django-alpha/static/images/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
+
+    <!-- GOOGLE FONTS -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;800&display=swap" rel="stylesheet">
+
+
+    <!-- PERSONAL CSS STYLES -->
+
     <link rel="stylesheet" href="{% static 'css/main.css' %} ">
     <style>
         #contact-btn {
@@ -29,7 +38,15 @@
             height: 40px;
         }
 
-        @media only screen and (max-width: 460px) {
+        .progress-bar {
+            text-align: center;
+        }
+
+        #header-navbar {
+            text-align: center;
+        }
+
+        @media only screen and (max-width: 600px) {
             .button-margin {
                 margin-top: 10px !important;
             }
@@ -49,6 +66,15 @@
 
             ul.socialCol {
                 padding-left: 0%;
+            }
+
+            .row {
+                display: flex;
+                flex-direction: column;
+            }
+
+            div.col:nth-child(2) {
+                padding-top: 10% !important;
             }
         }
     </style>
