--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,3 @@
-/* h1, h2, h3, p{
-    padding: 0.3em;
-} */
-/* 
-body {
-  font-family: "Rubik", sans-serif;
-} */
-
 body {
   font-size: large;
 }
@@ -114,7 +106,7 @@ hr {
   margin: 0em;
   flex-direction: column;
   justify-content: left;
-  text-align: right;
+  text-align: center;
 }
 
 #header-navbar {
