--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -29,6 +29,10 @@
 
     <link rel="stylesheet" href="{% static 'css/main.css' %} ">
     <style>
+        div.img-fluid {
+            max-width: 50%;
+        }
+
         #contact-btn {
             margin-left: 10px;
         }
