--- a/static/css/main.css
+++ b/static/css/main.css
@@ -149,6 +149,8 @@ mb-2 {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
 }
 
+/* BLOG */
+
 /* ----------------------------------- footer -----------------------------------*/
 
 ul.socialCol {
