--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -3,7 +3,7 @@
 {% block about %}
 
 <div class="center">
-    <h1 style="text-align: center;">About</h1>
+    <h1 style="text-align: center;">About &#128378</h1>
     <hr>
     <p>I’m a <b>Full Stack Python Developer</b> located in Barcelona. I have a serious passion for <b>Python</b> ,
         <b>Web
