--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -21,7 +21,7 @@
 
 <section>
     <div class="center">
-        <h1 style="text-align: center;">Let's get in contact!</h1>
+        <h1 style="text-align: center;">Let's get in contact! &#129309</h1>
         <hr>
         <form id="contactForm" method="POST" action="/contact/">
             {% csrf_token %}
@@ -34,7 +34,8 @@
             <label style="margin-top: 15px;" for="subject"><b>Message</b></label>
             {{form.message}}
 
-            <input style="margin-top: 15px;" class='btn btn-outline-dark border-0 cool-shadow project-btn' type="submit" value="Submit">
+            <input style="margin-top: 15px;" class='btn btn-outline-dark border-0 cool-shadow project-btn' type="submit"
+                value="Submit">
         </form>
 
     </div>
