--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -8,19 +8,23 @@
     Python & Full
     Stack Developer
   </h1>
-  <button type="button" class="button-margin btn btn-outline-dark cool-shadow border-0">Download
+
+  <button id="download-btn" type="button" class="button-margin btn btn-outline-dark cool-shadow border-0">Download
     <span style="color: rgb(225, 85, 84);">Resume</span></button>
+
+
   <a href="{% url 'home.contact' %}"><button id="contact-btn" type="button"
-      class="button-margin btn btn-outline-dark cool-shadow border-0"">Contact</button></a>
+      class="button-margin btn btn-outline-dark cool-shadow border-0 contact-btn">Contact</button></a>
   <hr>
 
-      <h5 style=" margin-left: auto; margin-right: auto; -ms-text-size-adjust: auto;">I’m a <b>hardworking
-        programmer</b> located in beautiful
-      Barcelona with a
-      passion for helping people and
-      companies to get the best possible outcome. <br> <b>Progress == Happiness</b></h5>
+  <h5 style=" margin-left: auto; margin-right: auto; -ms-text-size-adjust: auto;">I’m a <b>hardworking
+      programmer</b> located in beautiful
+    Barcelona with a
+    passion for helping people and
+    companies to get the best possible outcome. <br> <b>Progress == Happiness</b></h5>
 
-
+  <a href="{% url 'porfolio.index' %}"><button id="portfolio-btn" type="button"
+      class="button-margin btn btn-outline-dark cool-shadow border-0"> &#127947; See My Projects!</button></a>
 </div>
 
 <div class=" center">
