--- a/blog/templates/blog/blog_index.html
+++ b/blog/templates/blog/blog_index.html
@@ -5,37 +5,48 @@
 
 {%block blog %}
 
-<h1 style="text-align: center;">Blog</h1>
-<div style="padding-top: 0px;" class="col-md-8 offset-md-2 center">
+
+<h1 style="text-align: center;">Blog &#128211</h1>
+<div style="padding-top: 0px;" class="col-md-8 offset-md-2">
     <hr>
 
-    {% for post in posts %}
+    <div style="display: flex;
+    padding: 0%;" class="row">
+        {% for post in posts %}
 
-    <h4 class="center post-name" style="text-align: center;"><a href="{% url 'blog_detail' post.pk%}">{{post.name}}</a>
-    </h4>
+
+        <!-- IMAGE -->
+        <div class="col">
+            <div class="img-fluid rounded">
+                <img src="{{ post.image.url }}" class="img-fluid rounded blog-image" alt="{{post.name}}">
+            </div>
 
 
-    <div class="img-fluid rounded">
-        <img src="{{ post.image.url }}" class="img-fluid rounded blog-image" alt="{{post.name}}">
-    </div>
+        </div>
 
-    <small>
-        {{ post.created_on.date }} |&nbsp;
-        Categories:&nbsp;
-        {% for category in post.categories.all %}
-        <a href="{% url 'blog_category' category.name %}">
-            {{ category.name }}
-        </a>&nbsp;
+
+        <!-- TEXT -->
+        <div class="col" style="text-align: center;">
+            <h4 class="post-name" style="text-align: center;"><a href="{% url 'blog_detail' post.pk%}">{{post.name}}</a>
+            </h4>
+            <small style="font-size: small;">
+                {{ post.created_on.date }} |&nbsp;
+                Categories:&nbsp;
+                {% for category in post.categories.all %}
+                <a href="{% url 'blog_category' category.name %}">
+                    {{ category.name }}
+                </a>&nbsp;
+                {% endfor %}
+            </small>
+        </div>
+
+        <hr>
+
+        <!-- <p>{{ post.body | slice:":300" | safe }} ...</p> -->
+
         {% endfor %}
-    </small>
 
-    <hr>
-
-    <!-- <p>{{ post.body | slice:":300" | safe }} ...</p> -->
-
-    {% endfor %}
-
-
+    </div>
 
 
 </div>
