--- a/home/templates/home/footer.html
+++ b/home/templates/home/footer.html
@@ -4,7 +4,7 @@
 <!-- ================================
     Start Footer
     ================================= -->
-<footer>
+<footer style="margin: 0%;">
     <div class="footerCol shadow-sm p-3 mb-5 bg-body-tertiary rounded">
         <div class="container">
             <ul class="socialCol">
