--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -13,15 +13,15 @@
     <div class="col-md-4">
         <h5>About the project:</h5>
         <!-- <p>{{ project.description }}</p> -->
-        <p>{{ project.body |safe }}</p>
+        <p style="font-size: small;">{{ project.body |safe }}</p>
         <br>
         <hr class="hr " />
         <h5>Technology used:</h5>
-        <p>{{ project.technology }}</p>
+        <p style="font-size: small;">{{ project.technology }}</p>
         <hr class="hr " />
 
         <h5>Github Link:</h5>
-        <a href="{{project.github_link}}">{{ project.title}}</a>
+        <a style="font-size: small;" href="{{project.github_link}}">{{ project.title}}</a>
     </div>
 </div>
 {% endblock %}
