--- a/home/templates/home/certificates.html
+++ b/home/templates/home/certificates.html
@@ -1,11 +1,11 @@
 {% load static %}
 
-<div class="certificates center">
+<div class="certificates center" style="max-width: 450px;">
     <h2 style="text-align: center;">CERTIFICATES</h2>
     <hr class="hr " />
 
     <!--  Certificates Carousel-->
-    <div id="carouselExampleCaptions" class="carousel slide cool-shadow" style="max-width: 600px;">
+    <div id="carouselExampleCaptions" class="carousel slide cool-shadow" style="max-width: 450px;">
 
         <div class="carousel-inner">
 
