--- a/home/templates/home/certificates.html
+++ b/home/templates/home/certificates.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="certificates center" style="max-width: 450px;">
+<div class="certificates" style="width: 400px;">
     <h2 style="text-align: center;">CERTIFICATES</h2>
     <hr class="hr " />
 
