--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -83,6 +83,14 @@
                 margin-top: 10px !important;
             }
 
+            .certificates {
+                max-width: 500px;
+            }
+
+            #carouselExampleCaptions {
+                width: 400px !important;
+            }
+
             #contact-btn,
             #download-btn {
                 margin: 0;
