--- a/portfolio/templates/portfolio/portfolio_index.html
+++ b/portfolio/templates/portfolio/portfolio_index.html
@@ -22,7 +22,7 @@
                     <p style="font-size: small;" class="card-text" id="project-description">{{ project.description }}
                     </p>
                     <a href="{% url 'project_detail' project.pk %}"
-                        class="btn btn-outline-dark border-0 cool-shadow project-btn">
+                        class="btn btn-outline-dark border-0 cool-shadow project-btn contact-btn">
                         Read More
                     </a>
                 </div>
