--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -34,7 +34,7 @@
             <label style="margin-top: 15px;" for="subject"><b>Message</b></label>
             {{form.message}}
 
-            <input style="margin-top: 15px;" class='btn btn-outline-dark border-0 cool-shadow project-btn' type="submit"
+            <input style="margin-top: 15px;" class='btn btn-outline-dark border-0 cool-shadow project-btn contact-btn' type="submit"
                 value="Submit">
         </form>
 
