Add lanaguage flags in Home

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -21,7 +21,7 @@
       programmer</b> located in beautiful
     Barcelona with a
     passion for helping people and
-    companies to get the best possible outcome. <br> <b>Progress == Happiness</b></h5>
+    companies to get the best possible outcome. <br>🗣️ Able to work in 🇬🇧 🇪🇸 🇩🇪 🇧🇷 🇮🇹 🇦🇩 </h5>
 
   <a href="{% url 'porfolio.index' %}"><button id="portfolio-btn" type="button"
       class="button-margin btn btn-outline-dark cool-shadow border-0"> &#127947; See My Projects!</button></a>
