--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -18,7 +18,7 @@
   <!-- DOWNLOAD RESUME -->
   <a
     download="GeroZayasCV"
-    href="https://drive.google.com/file/d/1xJ2qXSLjFCLjRNlcd6_TvPI6lSagzbrw/view?usp=share_link"
+    href="https://rxresu.me/gerozayas/python--full-stack-developer-entry-level"
     class="button-margin btn btn-outline-dark cool-shadow border-0"
     >Download <span style="color: rgb(225, 85, 84)">Resume</span></a
   >
