--- a/home/templates/home/footer.html
+++ b/home/templates/home/footer.html
@@ -51,7 +51,7 @@
           <script type="text/javascript">
             document.write(new Date().getFullYear());
           </script>
-          Designed and coded with &#10084; by Gero Zayas
+          Designed and coded with &#10084; by Gero Zayas. Source code for this website can be found on <a href="https://github.com/GeroZayas/gerozayas_portfolio_bravo">Github</a>.
         </p>
       </div>
     </div>
