--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -23,6 +23,10 @@
     <div class="center">
         <h1 style="text-align: center;">Let's get in contact! &#129309</h1>
         <hr>
+        <label style="margin-top: 15px;">&#9993 <b>Mail: </b>gerozayas@gmail.com</label><br>
+        <label style="margin-top: 15px;"><b> &#128222 WhatsApp / Phone: </b>+34 684 21 74 45</label>
+        <hr>
+        <h5>👋 Or leave me a message and I'll contact you as soon as possible:</h5>
         <form id="contactForm" method="POST" action="/contact/">
             {% csrf_token %}
             <label style="margin-top: 15px;" for="name"><b>Name</b></label>
