Update Contact Add Linkedin Link

--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -24,7 +24,8 @@
         <h1 style="text-align: center;">Let's get in contact! &#129309</h1>
         <hr>
         <label style="margin-top: 15px;">&#9993 <b>Mail: </b>gerozayas@gmail.com</label><br>
-        <label style="margin-top: 15px;"><b> &#128222 WhatsApp / Phone: </b>+34 684 21 74 45</label>
+        <label style="margin-top: 15px;"><b> &#128222 WhatsApp / Phone: </b>+34 684 21 74 45</label><br>
+        <label style="margin-top: 15px;"><b> &#127760 LinkedIn: </b><a href="https://www.linkedin.com/in/gerardo-zayas-alvarez/">https://www.linkedin.com/in/gerardo-zayas-alvarez/</a></label>
         <hr>
         <h5>👋 Or leave me a message and I'll contact you as soon as possible:</h5>
         <form id="contactForm" method="POST" action="/contact/">
