--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -2,9 +2,8 @@
 
 <div style="text-align: center; max-width: 700px" class="center">
   <h1 class="hello">
-    Hi, I'm <span id="gero-name"><b>Gero</b></span
-    >, <br />
-    a Python & Full Stack Developer
+    Hi, I'm <span id="gero-name"><b>Gero Zayas</b></span
+    >, Python Software Engineer<br />
   </h1>
 
   <!-- <button
