Add new profile picture and style to presentation line

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,7 +3,7 @@
 <div style="text-align: center; max-width: 700px" class="center">
   <h1 class="hello">
     Hi, I'm <span id="gero-name"><b>Gero Zayas</b></span
-    > <br/> a creative Python Software Engineer<br />
+    > <br/> a <span style="color:rgb(238, 203, 3); font-weight: 700;">creative</span> Python Software Engineer<br />
   </h1>
 
   <!-- <button
