--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -95,12 +95,12 @@
               class="progress-bar rounded-pill bg-gradient-coding"
               style="width: 85%"
             >
-              HTML 85%
+              HTML / CSS 85%
             </div>
           </div>
           <hr class="hr" />
 
-          <!-- CSS SKILL -->
+          <!-- DJANGO and FLASK SKILL -->
           <div
             class="progress"
             role="progressbar"
@@ -113,7 +113,7 @@
               class="progress-bar rounded-pill bg-gradient-coding"
               style="width: 85%"
             >
-              CSS 85%
+              Django & Flask 85%
             </div>
           </div>
           <hr class="hr" />
@@ -131,7 +131,25 @@
               class="progress-bar rounded-pill bg-gradient-coding"
               style="width: 70%"
             >
-              Django 70%
+              SQL 70%
+            </div>
+          </div>
+          <hr class="hr" />
+
+          <!-- FastAPI SKILL -->
+          <div
+            class="progress"
+            role="progressbar"
+            aria-label="Example with label"
+            aria-valuenow="25"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          >
+            <div
+              class="progress-bar rounded-pill bg-gradient-coding"
+              style="width: 70%"
+            >
+              FastAPI 70%
             </div>
           </div>
           <hr class="hr" />
@@ -147,27 +165,9 @@
           >
             <div
               class="progress-bar rounded-pill bg-gradient-coding"
-              style="width: 70%"
-            >
-              JavaScript 70%
-            </div>
-          </div>
-          <hr class="hr" />
-
-          <!-- C# SKILL -->
-          <div
-            class="progress"
-            role="progressbar"
-            aria-label="Example with label"
-            aria-valuenow="25"
-            aria-valuemin="0"
-            aria-valuemax="100"
-          >
-            <div
-              class="progress-bar rounded-pill bg-gradient-coding"
               style="width: 60%"
             >
-              C# 60%
+              JavaScript 60%
             </div>
           </div>
           <p></p>
