Add explanation to each project in portfolio Add Image to About page

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -1,10 +1,16 @@
 {% extends './base.html' %}
+{% load static %}
+
 
 {% block about %}
 
 <div class="center">
+    
     <h1 style="text-align: center;">About &#128378</h1>
     <hr>
+    <img class="cool-shadow" src="{% static 'images/New-Profile-Pic-Gero.jpg' %}" height="200"
+       alt="profile picture gero zayas" style="display: block; margin: 0 auto; border-radius: 10px; margin-bottom: 20px;" />
+       
     <p>I’m a <b>Full Stack Python Developer</b> located in Barcelona. I have a serious passion for <b>Python</b> ,
         <b>Web
             Developement</b> and using the mighty power of programming <b>to solve real-world problems</b> and
