--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -45,7 +45,7 @@
       type="button"
       class="button-margin btn btn-outline-dark cool-shadow border-0"
     >
-      &#127947; See My Projects!
+      &#127947; See my projects!
     </button></a
   >
 </div>
